--- a/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/mj/CH03_운영체제.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/mj/CH03_운영체제.md
@@ -682,7 +682,162 @@
         - 계층적 페이징 (다단계 페이지 테이블)
             - Outer 페이지 테이블을 통해 페이지 테이블의 일부가 보조기억장치에 있더라도 언제든 접근 가능
 - 페이지 주소 체계
+    - <페이지 번호, 변위>와 같은 형태
+        - 페이지 번호: 몇 번째 페이지 번호에 접근할지
+        - 변위: 페이지 시작 번지로부터 얼만큼 떨어져 있는지
 
 ## 페이지 교체 알고리즘
 
+> 메모리에 적재된 페이지 중 보조기억장치로 내보낼 페이지를 선택하는 방법
+> 
+- `요구 페이징`: 메모리에 프로세스를 적재할 때 처음부터 모든 페이지를 적재하지 않고, 메모리에 필요한 페이지만을 적재하는 기법
+    - 과정
+        - CPU가 특정 페이지에 접근하는 명령어를 실행
+        - 해당 페이지가 현재 메모리에
+            - 있는 경우 (유효비트가 1) CPU는 페이지가 적재된 프레임에 접근
+            - 없는 경우 (유효비트가 0) 페이지 폴트가 발생
+            - 페이지 폴트가 발생하면 페이지 폴트 처리 루틴을 통해 해당 페이지를 메모리로 적재하고 유효비트를 1로 설정
+    - 아무런 페이지도 메모리에 적재하지 않은 채 프로세스를 실행할 수도 있음 → 순수 요구 페이징
+        - 프로세스의 첫 명령어를 실행하는 순간부터 페이지 폴트가 발생, 실행한 페이지가 어느정도 적재된 이후부터 페이지 폴트의 발생빈도가 떨어짐
+- 페이지 교체 알고리즘
+    - FIFO 페이지 교체 알고리즘
+        - 가장 먼저 적재된 페이지부터 스왑 아웃
+    - 최적 페이지 교체 알고리즘 (LFU)
+        - 사용빈도가 가장 낮은 페이지를 교체
+        - 가장 낮은 페이지 폴트율
+    - LRU 페이지 교체 알고리즘
+        - 가장 적게 사용한 페이지를 교체
+- 스래싱
+    - 지나친 페이지 교체로 인한 성능 저하와 관련해, 프로세스가 실제로 실행되는 시간보다 더 많은 시간을 소요하여 성능이 저하되는 문제
+- 페이지 폴트의 종류
+    - 메이저 페이지 폴트
+        - 보조기억장치에서 cpu에서 원하는 페이지를 ㅇ릭어들이기 위해 입출력 작업이 필요한 페이지 폴트
+        - CPU가 접근하려는 페이지가 물리 메모리에 없을 때 발생하는 페이지 폴트로 볼 수 있다.
+    - 마이너 페이지 폴트
+        - 보조기억장치와의 입출력이 필요하지 않은 페이지 폴트
+        - CPU가 요청한 페이지가 물리 메모리에는 존재하지만, 페이지 테이블 상에는 반여되지 않는 경우에 발생
+        - 성능 상의 악영향이 적은 편
+
 # 6. 파일 시스템
+
+> 운영체제가 어떻게 보조기억장치를 효과적으로 관리할까?
+파일 시스템: 보조기억장치의 정보를 **파일 및 디렉터리의 형태**로 저장하고 관리
+> 
+
+## 파일과 디렉터리
+
+### 파일
+
+- 파일: 파일의 이름, 파일을 실행하기 위한 정보, 파일과 관련한 부가 정보(=속성, 메타데이터)
+    - 파일을 다루는 모든 작업은 **운영체제에 의해 이루어짐**
+        - 응용 프로그램은 임의로 파일을 할당받아 조작하고 저장할 수 없음!!!
+            - → 파일을 다루는 시스템 콜 이용하기
+- 프로세스가 시스템 콜을 통해 파일 10개를 할당받았다면, 프로세스는 할당받아 사용 중인 파일을 구분할 수 있어야해!
+    - `파일 디스크립터`: 저수준에서 파익을 식별하는 정보, 0이상의 정수형태
+    - 시스템 콜 open()은 파일 디스크립터를 반환, write(), close()는 파일 디스크립터를 인자로 받음
+    - 파일 디스크립터는 파일뿐만 아니라 입출력장치, IPC수단인 파이프, 소켓 또한 (이롱의 파일로 간주하여) 파일 디스크립터로 식별한다.
+        - 0,1,2 (표준입력, 표준출력, 표준에러)
+
+### 디렉터리
+
+- 디렉터리: 여러 파일들을 관리하는 계층적 구조 (==윈도우의 폴더)
+    - 트리 구조 디렉터리
+        - 루트 디렉터리 (최상위 디렉터리는 / 로 표시)
+- 파일과 디렉터리는 별개가 아니다! 디렉터리도 파일의 일종인데, 디렉터리에 속한 요소의 관련 정보가 포함된 파일인 것이다.
+- 디렉터리 엔트리
+    - 디렉터리에 속한 요소의 관련 정보는 **테이블 형태**로 표현되고, 행 하나 하나를 디렉터리 엔트리라고 한다.
+    - 디렉터리 엔트리를 통해 보조기억장치에 저장되어 있는 위치를 알 수 있어서 디렉터리에 속한 파일의 위치를 읽어 실행할 수도, 디렉터리에 속한 다른 디렉터리의 위치를 찾아 이동할 수 있다!
+        - 일부 파일시스템은 파일의 속성도 함께 명시하기도 함
+
+### 파일 할당
+
+> 파일과 디렉터리가 어떻게 보조기억장치 안에 저장될까?
+> 
+- Q: 운영체제가 파일과 디렉터리를 읽고 쓰는 단위는?
+    - A: `블록`.
+    하나의 파일이 보조기억장치에 저장될 때는 하나 이상의 블록을 할당받아 저장됨
+    블록 안에 적힌 번호는 블록 주소.
+    파일 시스템에 따라 파일 및 디렉터리를 어떤 번호의 블록에 어떻게 할당하는지가 달라질 수 있음
+- 연결 할당
+    - 각 블록의 일부에 다음 블록의 주소를 저장
+    - 각각의 블록이 다음 블록을 가리키는 형태로 할당
+    - 디렉터리 엔트리에 있는 정보: 파일 이름, 파일을 이루는 첫 번째 블록 주소와 파일을 이루는 블록 단위의 길이
+- 색인 할당
+    - 파일을 이루는 모든 블록의 주소를 `색인 블록`에 모아 관리하는 방식
+    - 디렉터리 엔트리에 있는 정보: 파일 이름, 색인 블록 주소
+
+## 파일 시스템
+
+> 운영체제마다 다른 파일 시스템을 지원! 종류 다양! 하나의 컴퓨터에서 여러 파일 시스템을 사용할 수도 있음
+> 
+- `파티셔닝`
+    - 한 보조기억장치에 여러 파일 시스템을 적용하여 사용하기 위해, 보조기억장치의 영역을 구획하는 작업
+        - 파티셔닝 되어 나누어진 하나의 영역 → `파티션`
+- `포매팅`
+    - 다양한 파일 시스템 중 어떤 파일 시스템을 사용할지, 어떤 파일을 저장하고 관리할지 결정하고 새로운 데이터를 쓸 준비를 하는 작업
+- `아이노드`
+    - 리눅스 기반 파일 시스템 (EXT, EXT2, XFS, ZFS 등)에서 파일을 할당하는 **색인 블록**
+    - 담겨있는 정보: 파일이 저정된 위치, 속성 등 (파일 이름을 제외한) 파일의 모든 정보..
+- 아이노드 기반 파일 시스템
+    - 파일마다 각각의 아이노드를 가지고 있으며, 아이노드에는 각각의 번호가 부여되어 있음
+    - 파티션 내 특정 영역에 모여있음
+    - 데이터 영역에 공간이 남아 있더라도 아이노드 영역이 가득 차 더 이상의 아이노드를 할당할 수 없다면 운영체제는 새로운 파일을 생성할 수 없음
+- 하드 링크와 심볼릭 링크
+    - 아이노드를 기반으로 만들 수 있는 파일
+    - 디렉터리 엔트리에 파일 이름과 아이노드 번호가 명시되어 있다면 해당 아이노드에 접근할 수 있고, 아이노드를 통해 파일 데이터에 접근할 수 있다!
+    - 동일한 파일 속성과 데이터 블록을 공유하는 다른 이름의 파일, 파일을 가리키는 파일(바로가기 파일처럼)을 만들 수 있다.
+        - 하드링크 파일: 원본 파일과 같은 아이노드를 공유하는 파일
+        - 심볼릭 링크 파일: 원본 파일을 가리키는 파일
+    - 따라서 하드링크 파일을 변경하면 원본 파일도 변경되며 하드 링크 파일이 남아있다면 원본 파일이 삭제되거나 이동되더라도 파일 데이터에 접근할 수 있다.
+    - 심볼릭 링크 파일은 같은 파일 데이터를 공유하지 않고 원본 파일의 위치만을 저장하기 때문에 하드 링크 파일과는 달리 원본 파일이 삭제되거나 이동되는 경우에는 사용이 불가능하다.
+    - 그럼 언제 어떤 것을 쓸까?
+        - 동일한 파일을 여러 이름으로 참조하고 싶을 때
+            - 하드 링크 파일
+        - 복잡한 경로에 있는 파일을 바로가기 파일의 형태로 간단하게 참고하고 싶을 때
+            - 심볼릭 링크 파일
+
+### 마운트
+
+- USB 메모리를 데스크탑 컴퓨터에 연결하면 데스크톱 컴퓨터의 파일 시스템을 통해 USB 메모리의 파일 시스템에 접근할 수 있는 이유는?
+    - USB 메모리의 파일 시스템이 데스크톱 컴퓨터의 파일 시스템에 **마운트되었기 때문!**
+- 마운트: 어떤 저장장치의 파일 시스템에서 다른 저장장치의 파일 시스템으로 접근할 수 있도록 파일 시스템을 편입시키는 작업
+    
+    Ex) USB 메모리의 파일 시스템을 컴퓨터의 /mnt경로로 마운트하면 USB메모리의 파일 시스템은 /mnt경로를 통해 연결됨!
+    
+    /mnt/homework/os/a.cpp → /mnt/pictures/Dog.jpg
+    
+
+### Cf) 전원 버튼을 누르고 부팅이 되기까지
+
+- `부팅`: 커널을 메모리에 적재하여 컴퓨터를 시작하는 과정
+    - 처음 컴퓨터의 전원 버튼을 누르면 (전원이 인가된다) 휘발성 메모리인 RAM이 아닌 비휘발성 메모리인 ROM과 같은 메모리에서 정보를 읽어들이게 된다.
+    - CPU는 컴퓨터에 전원이 들어오면 미리 정해진 특정 주소를 읽어들인다. (바이오스라는 프로그램)
+    - 바이오스는 하드웨어를 검색한 뒤 문제가 있는지 여부를 검사 (POST:Power On Self Test)
+        - 이상이 없으면 보조기억장치의 마스터 부트 레코드라는 영역으로부터 필요한 특별한 정보를 읽어 오게 된다.
+        - 보조기억장치의 첫 부분에 있는 MBR에는 부트스트랩(부트 로더)이라는 프로그램이 있다.
+            - 이 부트로더가 바로 커널의 위치를 찾아 메모리에 적재하는 프로그램
+
+### 가상 머신과 컨테이너
+
+- 컴퓨터 하드웨어 상에 단일 운영체제를 설치하여 사용하는 경우가 많지만, 가상 머신과 컨테이너도 많이 활용한다.
+- `가상 머신`: 소프트웨어적으로 만들어 낸 가상의 컴퓨터
+    - `하이퍼바이저`: 이 가상 머신을 만들고 실행하기 위해 사용하는 소프트웨어
+        - 기존 운영체제와 독립된 환경을 구축할 수 있고, 또 다른 운영체제 및 애플리케이션을 작동시킬 수 있다.
+            - ex) 윈도우 운영체제의 대표적인 하이퍼바이저: VirtualBox
+        - **하드웨어 수준의 자원 격리 및 가상화를 제공**
+            - 단점) 속도가 다소 느리거나 용량을 많이 차지함 (가상 머신들이 공동의 하드웨어 자원을 할당받아 작동하는 구조이기 때문에 오버헤드 가능성)
+- `컨테이너`
+    - 또 다른 가상화 및 자원 격리 기술
+        - ex) 도커, LXC
+    - 컨테이너 오케스트레이션 (다양한 컨테이너를 관리)
+        - ex) 쿠버네티스
+        - 여러 컨테이너를 자동으로 배포하거나 환경에 맞게 동적으로 컨테이너의 수를 가감할 수 있고, 컨테이너 간 네트워크를 구성할 수 있다.
+- **가상머신과 컨테이너의 차이점**
+    - 가상머신 → 하드웨어 수준의 가상화 및 자원 격리
+        - 독립적인 운영체제 (커널)을 유지
+        - 가상 머신에서 어떤 프로세스를 실행할지에 구애받지 않고 가상머신마다 하드웨어를 격리
+    - 컨테이너 → 운영체제 수준의 가상화 및 자원 격리
+        - 동일한 커널을 공유
+        - 주어진 특정 프로세스를 실행하는데 필요한 자원만을 격리
+            
+            → 가상 머신에 비해 더 경량화되어 있고, 플랫폼에 구애받지 않는 실행에 유리
