--- a/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/mj/CH03_운영체제.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/mj/CH03_운영체제.md
@@ -30,6 +30,28 @@
 - 세마포의 종류에 대해 설명해주세요
 - 모니터가 실행 순서 제어를 위해 동기화하는 과정을 설명해주세요
 
+### 📌 CPU 스케줄링
+
+#### 1. 입출력 집중 프로세스와 CPU 집중 프로세스 중 우선순위가 높은 것은 무엇인가요?
+
+#### 2. 스케줄링 큐 동작과정을 간단하게 설명해주세요. (준비 큐와 대기 큐)
+
+#### 3. 우선순위 스케줄링, 다단계 큐 스케줄링, 다단계 피드백 큐 스케줄링을 비교해서 설명해주세요.
+
+## 📌 가상 메모리
+
+#### 1. 페이징 기법을 왜 사용하나요?
+
+#### 2. 페이지 테이블과 테이블 엔트리가 무엇이고, 포함되는 정보에는 어떤게 있나요?
+
+#### 3. 페이지 폴트가 무엇인가요?
+
+#### 4. 페이지 교체 알고리즘이 무엇인가요? 이 중 가장 낮은 페이지 폴트율을 보장하는 알고리즘은 무엇인가요?
+
+## 📌 파일 시스템
+
+#### 1. 가상 머신과 컨테이너의 차이점에 대해 설명해주세요
+
 ## ❓스터디에서 논의하고 싶은 질문
 
 -
@@ -447,171 +469,159 @@
      - 그러다가 교착 상태가 검출되면 프로세스를 자원 선점을 통해 회복시키거나, 교착 상태에 놓인 프로세스를 강제 종료함으로써 회복시킬 수 있음
        (자원 선점을 통한 회복: 교착 상태가 해결될 때까지 다른 프로세스로부터 강제로 자원을 빼앗아 한 프로세스에 몰아서 할당하는 것)
 
-
 # 4. CPU 스케줄링
 
 > 운영체제의 CPU 배분 방법 → CPU 스케줄링
-> 
 
 ## 우선순위
 
 > CPU의 자원을 공정하게 배분하는 방법은 프로세스의 우선순위를 판단하기!
-> 
+
 - 우선순위가 높을 수록, CPU의 자원을 더 빨리, 많이 할당한다.
 - 사용자가 직접 높일 수도 있음!
 - 그럼 ‘할당 기준’은 어떻게 될까?
-    - `CPU 활용률`: 전체 CPU의 가동 시간 중 작업을 처리하는 시간의 비율
-        - 운영체제는 높은 CPU 활용률을 유지하기 위해 기본적으로 입출력 작업이 많은 프로세스의 우선순위를 높게 유지
+  - `CPU 활용률`: 전체 CPU의 가동 시간 중 작업을 처리하는 시간의 비율
+    - 운영체제는 높은 CPU 활용률을 유지하기 위해 기본적으로 입출력 작업이 많은 프로세스의 우선순위를 높게 유지
 - CPU 버스트
-    - 대부분의 프로세스들은 CPU와 입출력장치를 모두 사용해 **실행과 대기 상태를 오가며 실행**
-    - `CPU 버스트`: 이때 프로세스가 CPU를 이용하는 작업 (입출력장치를 기다리는 작업: `입출력 버스트`)
-    - 프로세스마다 입출력장치를 이용하는 시간과 CPU 양에는 차이가 있음 (`입출력 집중 프로세스`, `CPU 집중 프로세스`)
+  - 대부분의 프로세스들은 CPU와 입출력장치를 모두 사용해 **실행과 대기 상태를 오가며 실행**
+  - `CPU 버스트`: 이때 프로세스가 CPU를 이용하는 작업 (입출력장치를 기다리는 작업: `입출력 버스트`)
+  - 프로세스마다 입출력장치를 이용하는 시간과 CPU 양에는 차이가 있음 (`입출력 집중 프로세스`, `CPU 집중 프로세스`)
 - 입출력 집중 프로세스와 CPU 집중 프로세스
-    - 입출력 집중 프로세스
-        - 실행 상태보다 입출력을 위한 대기 상태에 더 많이 머무름
-    - CPU 집중 프로세스
-        - 대기 상태보다 실행 상태에 더 많이 머무름
-    
-    → 각자 주로 머무르는 상태가 다르기 때문에 모든 프로세스가 동일한 시간의 빈도로 CPU를 사용하는 것은 합리적이지 않다!
-    
-    → 입출력 집중 프로세스를 가능한 빨리 실행시켜 끊임없이 입출력장치를 작동시킨 다음, CPU 집중 프로세스에 집중적으로 CPU를 할당하는 것이 더 합리적!
-    
-    **→ 그래서 입출력 집중 프로세스가 더 우선순위가 높음**
-    
+  - 입출력 집중 프로세스
+    - 실행 상태보다 입출력을 위한 대기 상태에 더 많이 머무름
+  - CPU 집중 프로세스
+    - 대기 상태보다 실행 상태에 더 많이 머무름
+  → 각자 주로 머무르는 상태가 다르기 때문에 모든 프로세스가 동일한 시간의 빈도로 CPU를 사용하는 것은 합리적이지 않다!
+  → 입출력 집중 프로세스를 가능한 빨리 실행시켜 끊임없이 입출력장치를 작동시킨 다음, CPU 집중 프로세스에 집중적으로 CPU를 할당하는 것이 더 합리적!
+  **→ 그래서 입출력 집중 프로세스가 더 우선순위가 높음**
 
 ## 스케줄링 큐
 
 - 운영체제: 프로세스들아~ 자원을 이용하고 싶다면 줄을 서서 기다리렴~
-    - 이 줄은 ‘스케줄링 큐’를 통해 구현됨
-        - CPU를 이용하고 싶은 프로세스의 PCB
-        - 메모리로 적재되고 싶은 프로세스의 PCB
-        - 특정 입출력장치를 이용하고 싶은 프로세스의 PCB
-        - 큐에 삽입하여 줄 세우기!
+  - 이 줄은 ‘스케줄링 큐’를 통해 구현됨
+    - CPU를 이용하고 싶은 프로세스의 PCB
+    - 메모리로 적재되고 싶은 프로세스의 PCB
+    - 특정 입출력장치를 이용하고 싶은 프로세스의 PCB
+    - 큐에 삽입하여 줄 세우기!
 - **준비 큐와 대기 큐**
-    - 준비 큐: CPU를 이용하고 싶은 프로세스의 PCB가 서는 줄
-    - 대기 큐: 대기 상태에 접어든 프로세스의 PCB가 서는 줄
+  - 준비 큐: CPU를 이용하고 싶은 프로세스의 PCB가 서는 줄
+  - 대기 큐: 대기 상태에 접어든 프로세스의 PCB가 서는 줄
 - ex)
-입출력 작업을 수행 중일 경우, 대기 큐에서 대기 상태로 입출력 완료 인터럽트를 기다리게됨
-    
-    → 준비 상태인 프로세스의 PCB는 준비 큐의 마지막에 삽입되어 CPU를 사용할 차례를 기다림
-    
+  입출력 작업을 수행 중일 경우, 대기 큐에서 대기 상태로 입출력 완료 인터럽트를 기다리게됨
+      → 준비 상태인 프로세스의 PCB는 준비 큐의 마지막에 삽입되어 CPU를 사용할 차례를 기다림
 
 ![image.png](attachment:25c69df7-14b7-4799-be04-3a46366c775a:image.png)
 
 - 운영체제: 큐에 삽입된 순서로 실행한다~ 대신 우선순위 높은 애들 손 들어봐!
-    - 실행하다가 할당받은 시간 끝나면 준비 큐로 가라~
-    - 실행하다가 입출력 작업 수행해야하면 대기 큐로 가라~
-    - 같은 입출력장치 요구한 애들은 대기 큐에서 기다리다가 입출력 완료됐다고 완료 인터럽트 발생하면, 대기 큐에서 완료된 애들부터 준비 상태로 바꿔주고 대기 큐에서 나와서 준비 큐로 가면 됨~
-    
+  - 실행하다가 할당받은 시간 끝나면 준비 큐로 가라~
+  - 실행하다가 입출력 작업 수행해야하면 대기 큐로 가라~
+  - 같은 입출력장치 요구한 애들은 대기 큐에서 기다리다가 입출력 완료됐다고 완료 인터럽트 발생하면, 대기 큐에서 완료된 애들부터 준비 상태로 바꿔주고 대기 큐에서 나와서 준비 큐로 가면 됨~
 
 ### 선점형 스케줄링과 비선점형 스케줄링
 
 > 스케줄링은 기본적으로 프로세스의 실행이 끝나면 이루어져. 근데? 프로세스가 종료되지 않았어도 스케줄링이 수행될 수 있냐? 2가지 경우가 있다.
-> 
+
 1. 실행 상태 → 대기 상태 (입출력 작업)
 2. 실행 상태 → 준비 상태 (타이머 인터럽트)
+
 - `선점형 스케줄링`
-    - 현재 어떤 프로세스가 CPU를 할당받아 사용하고 있더라도 운영체제가 프로세스로부터 CPU 자원을 **강제로 빼앗아 다른 프로세스에 할당할 수 있는** 스케줄링
-        - 장점
-            - 한 프로세스의 CPU 독점을 막고 여러 프로세스에 골고루 CPU 자원을 배분할 수 있다.
-        - 단점
-            - 문맥 교환 과정에서 오버헤드 발생 가능
+  - 현재 어떤 프로세스가 CPU를 할당받아 사용하고 있더라도 운영체제가 프로세스로부터 CPU 자원을 **강제로 빼앗아 다른 프로세스에 할당할 수 있는** 스케줄링
+    - 장점
+      - 한 프로세스의 CPU 독점을 막고 여러 프로세스에 골고루 CPU 자원을 배분할 수 있다.
+    - 단점
+      - 문맥 교환 과정에서 오버헤드 발생 가능
 - `비선점형 스케줄링`
-    - 어떤 프로세스가 CPU를 사용하고 있을 때 그 프로세스가 **종료되거나 스스로 대기 상태에 접어들기 전까지는** 다른 프로세스가 **끼어들 수 없는** 스케줄링 방식
-        - 장점
-            - 문맥 교환의 횟수가 적기 때문에 상대적으로 오버헤드의 발생은 적음
-        - 단점
-            - 당장 CPU를 사용해야하는 프로세스라도 무작정 기다릴 수 밖에 없음
+  - 어떤 프로세스가 CPU를 사용하고 있을 때 그 프로세스가 **종료되거나 스스로 대기 상태에 접어들기 전까지는** 다른 프로세스가 **끼어들 수 없는** 스케줄링 방식
+    - 장점
+      - 문맥 교환의 횟수가 적기 때문에 상대적으로 오버헤드의 발생은 적음
+    - 단점
+      - 당장 CPU를 사용해야하는 프로세스라도 무작정 기다릴 수 밖에 없음
 
 ## CPU 스케줄링 알고리즘
 
 > 전통적인 스케줄링 알고리즘
-> 
+
 1. **선입 선처리 스케줄링 (`FCFS`, First Come First Served)**
-    - 단순히 **준비 큐에 삽입된 순서대로** 먼저 CPU를 요청한 프로세스부터 할당하는 스케줄링 방식
-    - 단점)
-        - 프로세스들이 기다리는 시간이 매우 길어질 수 있다는 부작용 → 호위 효과 (convoy effect)
+   - 단순히 **준비 큐에 삽입된 순서대로** 먼저 CPU를 요청한 프로세스부터 할당하는 스케줄링 방식
+   - 단점)
+     - 프로세스들이 기다리는 시간이 매우 길어질 수 있다는 부작용 → 호위 효과 (convoy effect)
 2. **최단 작업 우선 스케줄링 (`SJF`, Shortest Job First)**
-    - 준비 큐에 삽입된 프로세스 중 **CPU를 이용하는 시간의 길이가 가장 짧은 프로세스부터** 먼저 실행하는 스케줄링 방식
-    - 비선점형 스케줄링 알고리즘으로 분류 (최소 잔여 시간 우선 스케줄링처럼 선점형으로 구현될 수도)
+   - 준비 큐에 삽입된 프로세스 중 **CPU를 이용하는 시간의 길이가 가장 짧은 프로세스부터** 먼저 실행하는 스케줄링 방식
+   - 비선점형 스케줄링 알고리즘으로 분류 (최소 잔여 시간 우선 스케줄링처럼 선점형으로 구현될 수도)
 3. **라운드 로빈 스케줄링 (`RR`, Round Robin)**
-    - 선입 선처리 스케줄링(FCFS) + **타임 슬라이스**
-        - 타임 슬라이스: 프로세스가 CPU를 사용하도록 정해진 시간
-        - 프로세스가 정해진 시간을 모두 사용하고도 완료되지 않으면 문맥 교환이 발생해 다시 큐의 맨 뒤에 삽입된다.
+   - 선입 선처리 스케줄링(FCFS) + **타임 슬라이스**
+     - 타임 슬라이스: 프로세스가 CPU를 사용하도록 정해진 시간
+     - 프로세스가 정해진 시간을 모두 사용하고도 완료되지 않으면 문맥 교환이 발생해 다시 큐의 맨 뒤에 삽입된다.
 4. **최소 잔여 시간 우선 스케줄링 (`SRT`, Shortest Remaining Time)**
-    - 최단 작업 우선(SJF) + 라운드 로빈(RR)
-    - 프로세스가 정해진 타임 슬라이스만큼 CPU를 이용하되, 남아있는 작업시간이 가장 적은 프로세스를 CPU를 이용할 프로세스로 선택한다
+   - 최단 작업 우선(SJF) + 라운드 로빈(RR)
+   - 프로세스가 정해진 타임 슬라이스만큼 CPU를 이용하되, 남아있는 작업시간이 가장 적은 프로세스를 CPU를 이용할 프로세스로 선택한다
 5. **우선순위 스케줄링 (Prioirity)**
-    - 프로세스에 우선순위를 부여하고, 가장 높은 우선순위를 가진 프로세스부터 실행하는 스케줄링 방식
-    - 단점)
-        - `아사` 현상 (starvation)
-            - 우선순위가 낮은 프로세스는 준비 큐에 먼저 삽입되었더라도 우선순위가 높은 프로세스로 인해 계속해서 실행이 연기 될 수 있다.
-        - 방지) `에이징`
-            - 오랫동안 대기한 프로세스의 우선순위를 점차 높이는 방식
+   - 프로세스에 우선순위를 부여하고, 가장 높은 우선순위를 가진 프로세스부터 실행하는 스케줄링 방식
+   - 단점)
+     - `아사` 현상 (starvation)
+       - 우선순위가 낮은 프로세스는 준비 큐에 먼저 삽입되었더라도 우선순위가 높은 프로세스로 인해 계속해서 실행이 연기 될 수 있다.
+     - 방지) `에이징`
+       - 오랫동안 대기한 프로세스의 우선순위를 점차 높이는 방식
 6. **다단계 큐 스케줄링 (multilevel queue)**
-    - 우선순위 스케줄링의 발전된 형태, **우선순위별로 여러 개의 준비 큐**를 사용하는 스케줄링 방식
-    - 우선순위가 가장 높은 큐에 있는 프로세스를 먼저 처리하고, 우선순위가 가장 높은 큐가 비어 있게 되면, 그 다음으로 우선순위가 높은 큐에 있는 프로세스를 처리
-    - 단점)
-        - 프로세스들이 큐 사이를 이동할 수 없기 때문에 우선순위가 **낮은 프로세스의 작업이 계속해서 연기될** 수 있다
+   - 우선순위 스케줄링의 발전된 형태, **우선순위별로 여러 개의 준비 큐**를 사용하는 스케줄링 방식
+   - 우선순위가 가장 높은 큐에 있는 프로세스를 먼저 처리하고, 우선순위가 가장 높은 큐가 비어 있게 되면, 그 다음으로 우선순위가 높은 큐에 있는 프로세스를 처리
+   - 단점)
+     - 프로세스들이 큐 사이를 이동할 수 없기 때문에 우선순위가 **낮은 프로세스의 작업이 계속해서 연기될** 수 있다
 7. **다단계 피드백 큐 스케줄링 (multilevel feedback queue)**
-    - 다단계 큐 스케줄링과 비슷하지만, 프로세스들이 큐 사이를 이동할 수 있다.
-        - 새롭게 진입하는 프로세스는 먼저 우선순위가 가장 높은 우선순위 큐에 삽입되고, 타임 슬라이스 동안 실행된다.
-        - 해당 큐에서 프로세스의 실행이 끝나지 않으면 다음 우선순위 큐에 삽입되어 실행된다.
-            
-            → **결국 오래 CPU를 사용해야하는 프로세스의 우선순위는 점차 낮아짐**
-            
-    - 아사 현상을 방지하기 위해 낮은 우선순위 큐에서 오래 기다리고 있는 프로세스들을 높은 우선순위 큐로 이동시키는 에이징 기법을 적용할 수도 있음
+   - 다단계 큐 스케줄링과 비슷하지만, 프로세스들이 큐 사이를 이동할 수 있다.
+     - 새롭게 진입하는 프로세스는 먼저 우선순위가 가장 높은 우선순위 큐에 삽입되고, 타임 슬라이스 동안 실행된다.
+     - 해당 큐에서 프로세스의 실행이 끝나지 않으면 다음 우선순위 큐에 삽입되어 실행된다.
+       → **결국 오래 CPU를 사용해야하는 프로세스의 우선순위는 점차 낮아짐**
+   - 아사 현상을 방지하기 위해 낮은 우선순위 큐에서 오래 기다리고 있는 프로세스들을 높은 우선순위 큐로 이동시키는 에이징 기법을 적용할 수도 있음
 
 > 실제로는 단일한 CPU 스케줄링 알고리즘이 적용되거나, 타임 슬라이스는 고정된 값으로 동일하게 할당되지 않을 수도 있다! (가중치에 따라 달라질 수도)
-> 
+
 - 리눅스 CPU 스케줄링
-    - SCHED_FIFO, SCHED_RR → 실시간 프로세스에 적용
-    - SCHED_NORMAL → 일반적인 프로세스에 적용
-        - `CFS`(Completely Fair Scheduler)
-            - 완전히 공평한 CPU 시간 배분을 지향하는 CPU 스케줄러
-            - `vruntime`(가중치를 고려한 가상 실행 시간)이 가장 작은 프로세스부터 스케줄링
-            - vruntime이 가장 작은 프로세스를 빠르게 선별할 수 있어야하는데 이때 RB트리를 활용
-    - SCHED_BATCH
-    - SCHED_IDLE
+  - SCHED_FIFO, SCHED_RR → 실시간 프로세스에 적용
+  - SCHED_NORMAL → 일반적인 프로세스에 적용
+    - `CFS`(Completely Fair Scheduler)
+      - 완전히 공평한 CPU 시간 배분을 지향하는 CPU 스케줄러
+      - `vruntime`(가중치를 고려한 가상 실행 시간)이 가장 작은 프로세스부터 스케줄링
+      - vruntime이 가장 작은 프로세스를 빠르게 선별할 수 있어야하는데 이때 RB트리를 활용
+  - SCHED_BATCH
+  - SCHED_IDLE
 
 # 5. 가상 메모리
 
 > CPU와 프로세스가 메모리 몇 번지에 무엇이 저장되어있는지 다 알고있을까?
-실시간으로 바뀌는 메모리 정보를 어떻게 인식하고 관리할까?
-> 
+> 실시간으로 바뀌는 메모리 정보를 어떻게 인식하고 관리할까?
 
 ## 물리 주소와 논리 주소
 
 - CPU와 프로세스는 메모리의 하드웨어 상 실제 주소인 물리 주소가 아닌 ‘논리 주소’를 사용한다.
 - 논리주소: 프로세스마다 부여되는 0번지부터 시작하는 주소 체계. 중복되는 논리 주소의 번지 수는 얼마든지 존재할 수 있다.
 - 논리 주소 → `MMU(메모리 관리 장치)` → 물리주소
-    - MMU (MEMORY Management Unit)은 CPU와 메모리 사이에서 논리주소를 물리주소로 변환해준다!
+  - MMU (MEMORY Management Unit)은 CPU와 메모리 사이에서 논리주소를 물리주소로 변환해준다!
 
 ## 스와핑과 연속 메모리 할당
 
 ### 스와핑
 
 > 현재 실행되지 않는 프로세스 (대기 상태가 되었거나 오랫동안 사용되지 않은 프로세스)를 임시로 스왑 영역이라는 보조기억장치의 일부인 영역으로 쫓아내고, 프로세스를 쫓아낸 자리에 생긴 메모리 상의 빈 공간에 다른 프로세스를 적재하여 실행하는 메모리 관리 방식
-> 
+
 - 스왑 아웃: 현재 실행되지 않는 프로세스가 메모리 → 스왑 영역으로 이동
 - 스왑 인: 스왑 영역에 있는 프로세스가 스왑 영역 → 메모리
 
 ### 연속 메모리 할당과 외부 단편화
 
 - 연속 메모리 할당: 프로세스에 연속적인 메모리 공간을 할당하는 방식
-→ `외부 단편화` 발생 가능!!
+  → `외부 단편화` 발생 가능!!
 - 외부 단편화
-    - 프로세스들이 메모리에 연속적으로 할당되는 환경에서는 프로세스의 실행과 종료를 반복하며 메모리 사이 사이에 빈 공간이 생긴다.
-    - 빈 공간보다 큰 프로세스를 적재하기 어려운 상황을 초래하여 메모리 낭비로 이어지는 현상
-        
-        (빈 공간의 총합이 50MB라도 30+20MB면 사실 크기가 50MB인 프로세스를 적재하기 힘듦)| 
-        
+  - 프로세스들이 메모리에 연속적으로 할당되는 환경에서는 프로세스의 실행과 종료를 반복하며 메모리 사이 사이에 빈 공간이 생긴다.
+  - 빈 공간보다 큰 프로세스를 적재하기 어려운 상황을 초래하여 메모리 낭비로 이어지는 현상
+    (빈 공간의 총합이 50MB라도 30+20MB면 사실 크기가 50MB인 프로세스를 적재하기 힘듦)|
 
 > 스와핑과 연속 메모리 할당은
+
 1. 외부 단편화
 2. 물리 메모리보다 큰 프로세스를 실행할 수 없는 문제
-라는 문제가 있다! 이를 해결하기 위해 등장한 것이 → **`가상 메모리`**
-> 
+   라는 문제가 있다! 이를 해결하기 위해 등장한 것이 → **`가상 메모리`**
+   >
 
 ## 페이징을 통한 가상 메모리 관리
 
@@ -619,225 +629,216 @@
 - 보조기억장치의 일부를 메모리처럼 사용하거나 프로세스의 일부만 메모리에 적재함으로써 메모리를 실제 크기보다 더 크게 보이게 하는 기술
 
 > 가상 메모리 관리 기법
+
 1. 페이징
 2. 세그멘테이션
-> 
+   >
 
 - cf)세그멘테이션
-    
-    > 페이지 단위가 아닌 가변적인 크기의 세그먼트 단위로 분할하는 방식
-    > 
-    - 한 세그먼트는 코드 영역(의 일부)일 수도 있고 데이터 영역(의 일부)일 수도 있다. 세그멘테이션 기법을 이용하면 세그먼트의 크기가 일정하지 않기 때문에 외부 단편화가 발생할 수 있다.
+  > 페이지 단위가 아닌 가변적인 크기의 세그먼트 단위로 분할하는 방식
+  - 한 세그먼트는 코드 영역(의 일부)일 수도 있고 데이터 영역(의 일부)일 수도 있다. 세그멘테이션 기법을 이용하면 세그먼트의 크기가 일정하지 않기 때문에 외부 단편화가 발생할 수 있다.
 
 ### 페이징
 
 > 프로세스의 논리 주소 공간을 **`페이지`**라는 일정한 단위로 나누고, 물리 주소 공간을 페이지와 동일한 크기의 **`프레임`**이라는 일정한 단위로 나눈 뒤, 페이지를 프레임에 할당하는 가상 메모리 관리 기법
-> 
+
 - 외부 단편화 발생하지않음!
-    - 페이지라는 일정한 크기로 잘린 프로세스들을 메모리에 불연속적으로 할당할 수 있다면 연속 메모리 할당처럼 프로세스 바깥에 빈 공간이 생길 수 없음!
+  - 페이지라는 일정한 크기로 잘린 프로세스들을 메모리에 불연속적으로 할당할 수 있다면 연속 메모리 할당처럼 프로세스 바깥에 빈 공간이 생길 수 없음!
 - **스와핑**
-    - 페이징 기법에서도 스와핑이 사용될 수 있다.
-    - 프로세스 전체가 스왑 아웃-스왑 인 되는 것이 아니라 **페이지 단위로 스왑 아웃/ 스왑 인** 된다.
-        
-        **(페이지 아웃 / 페이지 인)**
-        
+  - 페이징 기법에서도 스와핑이 사용될 수 있다.
+  - 프로세스 전체가 스왑 아웃-스왑 인 되는 것이 아니라 **페이지 단위로 스왑 아웃/ 스왑 인** 된다.
+    **(페이지 아웃 / 페이지 인)**
 - `페이지 테이블`
-    - 프로세스의 페이지와 실제로 적재된 프레임을 짝지어주는 정보. 프로세스마다 각자의 페이지 테이블 정보를 갖고 있음
-    - 페이지 번호, 프레임 번호 (대응)
+  - 프로세스의 페이지와 실제로 적재된 프레임을 짝지어주는 정보. 프로세스마다 각자의 페이지 테이블 정보를 갖고 있음
+  - 페이지 번호, 프레임 번호 (대응)
 - `테이블 엔트리`
-    - 페이지 테이블을 구성하고 있는 각각의 행
-    - 담고 있는 정보
-        - 페이지 번호, 프레임 번호
-        - 유효 비트, 보호 비트, 참조 비트, 수정 비트
-    - 유효 비트
-        - 현재 페이지가 메모리에 적재되어 있으면 →1
-        적재되어 있지 않다면 0
-        - CPU는 보조기억장치에 저장된 페이지에 곧장 접근할 수 없으므로 보조기억장치에 저장된 페이지에 접근하려면 보조기억장치 속 페이지를 메모리로 적재한 뒤에 접근해야함
-        - **`페이지 폴트`**: 유효 비트가 0인 페이지에 접근하려고 하면 예외 발생
-            
-            > 페이지 폴트 처리과정
-            > 
-            > 1. 기존 작업 내역 백업
-            > 2. 페이지 폴터 처리 루틴 실행 (원하는 페이지를 메모리로 가져와 유효 비트를 1로 변경)
-            > 3. 페이지 폴트 처리 루틴 실행 후 메모리에 적재된 페이지 실행
-    - 보호 비트
-        - rwx의 조합
-    - 참조 비트
-        - CPU가 해당 페이지에 접근한 적이 있는지의 여부
-    - 수정 비트 (더티 비트)
-        - 해당 페이지에 데이터를 쓴 적이 있는지의 여부
-        - 1인 경우, 페이지의 수정 내역을 보조기억장치에도 반영해 두어야 하므로 보조기억장치에 대한 쓰기 작업이 필요
+  - 페이지 테이블을 구성하고 있는 각각의 행
+  - 담고 있는 정보
+    - 페이지 번호, 프레임 번호
+    - 유효 비트, 보호 비트, 참조 비트, 수정 비트
+  - 유효 비트
+    - 현재 페이지가 메모리에 적재되어 있으면 →1
+      적재되어 있지 않다면 0
+    - CPU는 보조기억장치에 저장된 페이지에 곧장 접근할 수 없으므로 보조기억장치에 저장된 페이지에 접근하려면 보조기억장치 속 페이지를 메모리로 적재한 뒤에 접근해야함
+    - **`페이지 폴트`**: 유효 비트가 0인 페이지에 접근하려고 하면 예외 발생
+      > 페이지 폴트 처리과정
+      >
+      > 1. 기존 작업 내역 백업
+      > 2. 페이지 폴터 처리 루틴 실행 (원하는 페이지를 메모리로 가져와 유효 비트를 1로 변경)
+      > 3. 페이지 폴트 처리 루틴 실행 후 메모리에 적재된 페이지 실행
+  - 보호 비트
+    - rwx의 조합
+  - 참조 비트
+    - CPU가 해당 페이지에 접근한 적이 있는지의 여부
+  - 수정 비트 (더티 비트)
+    - 해당 페이지에 데이터를 쓴 적이 있는지의 여부
+    - 1인 경우, 페이지의 수정 내역을 보조기억장치에도 반영해 두어야 하므로 보조기억장치에 대한 쓰기 작업이 필요
 - `내부 단편화`
-    - 논리 주소 공간을 페이지라는 일정한 크기의 단위로 나누는 방식이지만 모든 프로세스가 페이지 크기에 딱 맞게잘리는 것이 아님
-    - **페이지 하나의 크기보다 작은 크기로 발생**하게 되는 메모리 낭비 → 내부 단편화
+  - 논리 주소 공간을 페이지라는 일정한 크기의 단위로 나누는 방식이지만 모든 프로세스가 페이지 크기에 딱 맞게잘리는 것이 아님
+  - **페이지 하나의 크기보다 작은 크기로 발생**하게 되는 메모리 낭비 → 내부 단편화
 - `페이지 테이블 베이스 레지스터(PTBR)`
-    - 프로세스를 실행하려면 프로세스의 페이지 테이블이 메모리에 적재된 위치를 알아야함
-    - 이 위치를 가리키는 레지스터가 PTBR
-    - 프로세스마다 가지는 정보이며, 각 PCB에 기록됨
+  - 프로세스를 실행하려면 프로세스의 페이지 테이블이 메모리에 적재된 위치를 알아야함
+  - 이 위치를 가리키는 레지스터가 PTBR
+  - 프로세스마다 가지는 정보이며, 각 PCB에 기록됨
 - 운영체제는 모든 페이지 테이블을 메모리에 적재하는 것을 가급적 지양
-    1. 메모리 접근 횟수
-        - TLB (페이지 테이블의 캐시 메모리)
-        - TLB 히트/미스
-    2. 메모리 용량
-        - 계층적 페이징 (다단계 페이지 테이블)
-            - Outer 페이지 테이블을 통해 페이지 테이블의 일부가 보조기억장치에 있더라도 언제든 접근 가능
+  1. 메모리 접근 횟수
+     - TLB (페이지 테이블의 캐시 메모리)
+     - TLB 히트/미스
+  2. 메모리 용량
+     - 계층적 페이징 (다단계 페이지 테이블)
+       - Outer 페이지 테이블을 통해 페이지 테이블의 일부가 보조기억장치에 있더라도 언제든 접근 가능
 - 페이지 주소 체계
-    - <페이지 번호, 변위>와 같은 형태
-        - 페이지 번호: 몇 번째 페이지 번호에 접근할지
-        - 변위: 페이지 시작 번지로부터 얼만큼 떨어져 있는지
+  - <페이지 번호, 변위>와 같은 형태
+    - 페이지 번호: 몇 번째 페이지 번호에 접근할지
+    - 변위: 페이지 시작 번지로부터 얼만큼 떨어져 있는지
 
 ## 페이지 교체 알고리즘
 
 > 메모리에 적재된 페이지 중 보조기억장치로 내보낼 페이지를 선택하는 방법
-> 
+
 - `요구 페이징`: 메모리에 프로세스를 적재할 때 처음부터 모든 페이지를 적재하지 않고, 메모리에 필요한 페이지만을 적재하는 기법
-    - 과정
-        - CPU가 특정 페이지에 접근하는 명령어를 실행
-        - 해당 페이지가 현재 메모리에
-            - 있는 경우 (유효비트가 1) CPU는 페이지가 적재된 프레임에 접근
-            - 없는 경우 (유효비트가 0) 페이지 폴트가 발생
-            - 페이지 폴트가 발생하면 페이지 폴트 처리 루틴을 통해 해당 페이지를 메모리로 적재하고 유효비트를 1로 설정
-    - 아무런 페이지도 메모리에 적재하지 않은 채 프로세스를 실행할 수도 있음 → 순수 요구 페이징
-        - 프로세스의 첫 명령어를 실행하는 순간부터 페이지 폴트가 발생, 실행한 페이지가 어느정도 적재된 이후부터 페이지 폴트의 발생빈도가 떨어짐
+  - 과정
+    - CPU가 특정 페이지에 접근하는 명령어를 실행
+    - 해당 페이지가 현재 메모리에
+      - 있는 경우 (유효비트가 1) CPU는 페이지가 적재된 프레임에 접근
+      - 없는 경우 (유효비트가 0) 페이지 폴트가 발생
+      - 페이지 폴트가 발생하면 페이지 폴트 처리 루틴을 통해 해당 페이지를 메모리로 적재하고 유효비트를 1로 설정
+  - 아무런 페이지도 메모리에 적재하지 않은 채 프로세스를 실행할 수도 있음 → 순수 요구 페이징
+    - 프로세스의 첫 명령어를 실행하는 순간부터 페이지 폴트가 발생, 실행한 페이지가 어느정도 적재된 이후부터 페이지 폴트의 발생빈도가 떨어짐
 - 페이지 교체 알고리즘
-    - FIFO 페이지 교체 알고리즘
-        - 가장 먼저 적재된 페이지부터 스왑 아웃
-    - 최적 페이지 교체 알고리즘 (LFU)
-        - 사용빈도가 가장 낮은 페이지를 교체
-        - 가장 낮은 페이지 폴트율
-    - LRU 페이지 교체 알고리즘
-        - 가장 적게 사용한 페이지를 교체
+  - FIFO 페이지 교체 알고리즘
+    - 가장 먼저 적재된 페이지부터 스왑 아웃
+  - 최적 페이지 교체 알고리즘 (LFU)
+    - 사용빈도가 가장 낮은 페이지를 교체
+    - 가장 낮은 페이지 폴트율
+  - LRU 페이지 교체 알고리즘
+    - 가장 적게 사용한 페이지를 교체
 - 스래싱
-    - 지나친 페이지 교체로 인한 성능 저하와 관련해, 프로세스가 실제로 실행되는 시간보다 더 많은 시간을 소요하여 성능이 저하되는 문제
+  - 지나친 페이지 교체로 인한 성능 저하와 관련해, 프로세스가 실제로 실행되는 시간보다 더 많은 시간을 소요하여 성능이 저하되는 문제
 - 페이지 폴트의 종류
-    - 메이저 페이지 폴트
-        - 보조기억장치에서 cpu에서 원하는 페이지를 ㅇ릭어들이기 위해 입출력 작업이 필요한 페이지 폴트
-        - CPU가 접근하려는 페이지가 물리 메모리에 없을 때 발생하는 페이지 폴트로 볼 수 있다.
-    - 마이너 페이지 폴트
-        - 보조기억장치와의 입출력이 필요하지 않은 페이지 폴트
-        - CPU가 요청한 페이지가 물리 메모리에는 존재하지만, 페이지 테이블 상에는 반여되지 않는 경우에 발생
-        - 성능 상의 악영향이 적은 편
+  - 메이저 페이지 폴트
+    - 보조기억장치에서 cpu에서 원하는 페이지를 ㅇ릭어들이기 위해 입출력 작업이 필요한 페이지 폴트
+    - CPU가 접근하려는 페이지가 물리 메모리에 없을 때 발생하는 페이지 폴트로 볼 수 있다.
+  - 마이너 페이지 폴트
+    - 보조기억장치와의 입출력이 필요하지 않은 페이지 폴트
+    - CPU가 요청한 페이지가 물리 메모리에는 존재하지만, 페이지 테이블 상에는 반여되지 않는 경우에 발생
+    - 성능 상의 악영향이 적은 편
 
 # 6. 파일 시스템
 
 > 운영체제가 어떻게 보조기억장치를 효과적으로 관리할까?
-파일 시스템: 보조기억장치의 정보를 **파일 및 디렉터리의 형태**로 저장하고 관리
-> 
+> 파일 시스템: 보조기억장치의 정보를 **파일 및 디렉터리의 형태**로 저장하고 관리
 
 ## 파일과 디렉터리
 
 ### 파일
 
 - 파일: 파일의 이름, 파일을 실행하기 위한 정보, 파일과 관련한 부가 정보(=속성, 메타데이터)
-    - 파일을 다루는 모든 작업은 **운영체제에 의해 이루어짐**
-        - 응용 프로그램은 임의로 파일을 할당받아 조작하고 저장할 수 없음!!!
-            - → 파일을 다루는 시스템 콜 이용하기
+  - 파일을 다루는 모든 작업은 **운영체제에 의해 이루어짐**
+    - 응용 프로그램은 임의로 파일을 할당받아 조작하고 저장할 수 없음!!!
+      - → 파일을 다루는 시스템 콜 이용하기
 - 프로세스가 시스템 콜을 통해 파일 10개를 할당받았다면, 프로세스는 할당받아 사용 중인 파일을 구분할 수 있어야해!
-    - `파일 디스크립터`: 저수준에서 파익을 식별하는 정보, 0이상의 정수형태
-    - 시스템 콜 open()은 파일 디스크립터를 반환, write(), close()는 파일 디스크립터를 인자로 받음
-    - 파일 디스크립터는 파일뿐만 아니라 입출력장치, IPC수단인 파이프, 소켓 또한 (이롱의 파일로 간주하여) 파일 디스크립터로 식별한다.
-        - 0,1,2 (표준입력, 표준출력, 표준에러)
+  - `파일 디스크립터`: 저수준에서 파익을 식별하는 정보, 0이상의 정수형태
+  - 시스템 콜 open()은 파일 디스크립터를 반환, write(), close()는 파일 디스크립터를 인자로 받음
+  - 파일 디스크립터는 파일뿐만 아니라 입출력장치, IPC수단인 파이프, 소켓 또한 (이롱의 파일로 간주하여) 파일 디스크립터로 식별한다.
+    - 0,1,2 (표준입력, 표준출력, 표준에러)
 
 ### 디렉터리
 
 - 디렉터리: 여러 파일들을 관리하는 계층적 구조 (==윈도우의 폴더)
-    - 트리 구조 디렉터리
-        - 루트 디렉터리 (최상위 디렉터리는 / 로 표시)
+  - 트리 구조 디렉터리
+    - 루트 디렉터리 (최상위 디렉터리는 / 로 표시)
 - 파일과 디렉터리는 별개가 아니다! 디렉터리도 파일의 일종인데, 디렉터리에 속한 요소의 관련 정보가 포함된 파일인 것이다.
 - 디렉터리 엔트리
-    - 디렉터리에 속한 요소의 관련 정보는 **테이블 형태**로 표현되고, 행 하나 하나를 디렉터리 엔트리라고 한다.
-    - 디렉터리 엔트리를 통해 보조기억장치에 저장되어 있는 위치를 알 수 있어서 디렉터리에 속한 파일의 위치를 읽어 실행할 수도, 디렉터리에 속한 다른 디렉터리의 위치를 찾아 이동할 수 있다!
-        - 일부 파일시스템은 파일의 속성도 함께 명시하기도 함
+  - 디렉터리에 속한 요소의 관련 정보는 **테이블 형태**로 표현되고, 행 하나 하나를 디렉터리 엔트리라고 한다.
+  - 디렉터리 엔트리를 통해 보조기억장치에 저장되어 있는 위치를 알 수 있어서 디렉터리에 속한 파일의 위치를 읽어 실행할 수도, 디렉터리에 속한 다른 디렉터리의 위치를 찾아 이동할 수 있다!
+    - 일부 파일시스템은 파일의 속성도 함께 명시하기도 함
 
 ### 파일 할당
 
 > 파일과 디렉터리가 어떻게 보조기억장치 안에 저장될까?
-> 
+
 - Q: 운영체제가 파일과 디렉터리를 읽고 쓰는 단위는?
-    - A: `블록`.
+  - A: `블록`.
     하나의 파일이 보조기억장치에 저장될 때는 하나 이상의 블록을 할당받아 저장됨
     블록 안에 적힌 번호는 블록 주소.
     파일 시스템에 따라 파일 및 디렉터리를 어떤 번호의 블록에 어떻게 할당하는지가 달라질 수 있음
 - 연결 할당
-    - 각 블록의 일부에 다음 블록의 주소를 저장
-    - 각각의 블록이 다음 블록을 가리키는 형태로 할당
-    - 디렉터리 엔트리에 있는 정보: 파일 이름, 파일을 이루는 첫 번째 블록 주소와 파일을 이루는 블록 단위의 길이
+  - 각 블록의 일부에 다음 블록의 주소를 저장
+  - 각각의 블록이 다음 블록을 가리키는 형태로 할당
+  - 디렉터리 엔트리에 있는 정보: 파일 이름, 파일을 이루는 첫 번째 블록 주소와 파일을 이루는 블록 단위의 길이
 - 색인 할당
-    - 파일을 이루는 모든 블록의 주소를 `색인 블록`에 모아 관리하는 방식
-    - 디렉터리 엔트리에 있는 정보: 파일 이름, 색인 블록 주소
+  - 파일을 이루는 모든 블록의 주소를 `색인 블록`에 모아 관리하는 방식
+  - 디렉터리 엔트리에 있는 정보: 파일 이름, 색인 블록 주소
 
 ## 파일 시스템
 
 > 운영체제마다 다른 파일 시스템을 지원! 종류 다양! 하나의 컴퓨터에서 여러 파일 시스템을 사용할 수도 있음
-> 
+
 - `파티셔닝`
-    - 한 보조기억장치에 여러 파일 시스템을 적용하여 사용하기 위해, 보조기억장치의 영역을 구획하는 작업
-        - 파티셔닝 되어 나누어진 하나의 영역 → `파티션`
+  - 한 보조기억장치에 여러 파일 시스템을 적용하여 사용하기 위해, 보조기억장치의 영역을 구획하는 작업
+    - 파티셔닝 되어 나누어진 하나의 영역 → `파티션`
 - `포매팅`
-    - 다양한 파일 시스템 중 어떤 파일 시스템을 사용할지, 어떤 파일을 저장하고 관리할지 결정하고 새로운 데이터를 쓸 준비를 하는 작업
+  - 다양한 파일 시스템 중 어떤 파일 시스템을 사용할지, 어떤 파일을 저장하고 관리할지 결정하고 새로운 데이터를 쓸 준비를 하는 작업
 - `아이노드`
-    - 리눅스 기반 파일 시스템 (EXT, EXT2, XFS, ZFS 등)에서 파일을 할당하는 **색인 블록**
-    - 담겨있는 정보: 파일이 저정된 위치, 속성 등 (파일 이름을 제외한) 파일의 모든 정보..
+  - 리눅스 기반 파일 시스템 (EXT, EXT2, XFS, ZFS 등)에서 파일을 할당하는 **색인 블록**
+  - 담겨있는 정보: 파일이 저정된 위치, 속성 등 (파일 이름을 제외한) 파일의 모든 정보..
 - 아이노드 기반 파일 시스템
-    - 파일마다 각각의 아이노드를 가지고 있으며, 아이노드에는 각각의 번호가 부여되어 있음
-    - 파티션 내 특정 영역에 모여있음
-    - 데이터 영역에 공간이 남아 있더라도 아이노드 영역이 가득 차 더 이상의 아이노드를 할당할 수 없다면 운영체제는 새로운 파일을 생성할 수 없음
+  - 파일마다 각각의 아이노드를 가지고 있으며, 아이노드에는 각각의 번호가 부여되어 있음
+  - 파티션 내 특정 영역에 모여있음
+  - 데이터 영역에 공간이 남아 있더라도 아이노드 영역이 가득 차 더 이상의 아이노드를 할당할 수 없다면 운영체제는 새로운 파일을 생성할 수 없음
 - 하드 링크와 심볼릭 링크
-    - 아이노드를 기반으로 만들 수 있는 파일
-    - 디렉터리 엔트리에 파일 이름과 아이노드 번호가 명시되어 있다면 해당 아이노드에 접근할 수 있고, 아이노드를 통해 파일 데이터에 접근할 수 있다!
-    - 동일한 파일 속성과 데이터 블록을 공유하는 다른 이름의 파일, 파일을 가리키는 파일(바로가기 파일처럼)을 만들 수 있다.
-        - 하드링크 파일: 원본 파일과 같은 아이노드를 공유하는 파일
-        - 심볼릭 링크 파일: 원본 파일을 가리키는 파일
-    - 따라서 하드링크 파일을 변경하면 원본 파일도 변경되며 하드 링크 파일이 남아있다면 원본 파일이 삭제되거나 이동되더라도 파일 데이터에 접근할 수 있다.
-    - 심볼릭 링크 파일은 같은 파일 데이터를 공유하지 않고 원본 파일의 위치만을 저장하기 때문에 하드 링크 파일과는 달리 원본 파일이 삭제되거나 이동되는 경우에는 사용이 불가능하다.
-    - 그럼 언제 어떤 것을 쓸까?
-        - 동일한 파일을 여러 이름으로 참조하고 싶을 때
-            - 하드 링크 파일
-        - 복잡한 경로에 있는 파일을 바로가기 파일의 형태로 간단하게 참고하고 싶을 때
-            - 심볼릭 링크 파일
+  - 아이노드를 기반으로 만들 수 있는 파일
+  - 디렉터리 엔트리에 파일 이름과 아이노드 번호가 명시되어 있다면 해당 아이노드에 접근할 수 있고, 아이노드를 통해 파일 데이터에 접근할 수 있다!
+  - 동일한 파일 속성과 데이터 블록을 공유하는 다른 이름의 파일, 파일을 가리키는 파일(바로가기 파일처럼)을 만들 수 있다.
+    - 하드링크 파일: 원본 파일과 같은 아이노드를 공유하는 파일
+    - 심볼릭 링크 파일: 원본 파일을 가리키는 파일
+  - 따라서 하드링크 파일을 변경하면 원본 파일도 변경되며 하드 링크 파일이 남아있다면 원본 파일이 삭제되거나 이동되더라도 파일 데이터에 접근할 수 있다.
+  - 심볼릭 링크 파일은 같은 파일 데이터를 공유하지 않고 원본 파일의 위치만을 저장하기 때문에 하드 링크 파일과는 달리 원본 파일이 삭제되거나 이동되는 경우에는 사용이 불가능하다.
+  - 그럼 언제 어떤 것을 쓸까?
+    - 동일한 파일을 여러 이름으로 참조하고 싶을 때
+      - 하드 링크 파일
+    - 복잡한 경로에 있는 파일을 바로가기 파일의 형태로 간단하게 참고하고 싶을 때
+      - 심볼릭 링크 파일
 
 ### 마운트
 
 - USB 메모리를 데스크탑 컴퓨터에 연결하면 데스크톱 컴퓨터의 파일 시스템을 통해 USB 메모리의 파일 시스템에 접근할 수 있는 이유는?
-    - USB 메모리의 파일 시스템이 데스크톱 컴퓨터의 파일 시스템에 **마운트되었기 때문!**
+  - USB 메모리의 파일 시스템이 데스크톱 컴퓨터의 파일 시스템에 **마운트되었기 때문!**
 - 마운트: 어떤 저장장치의 파일 시스템에서 다른 저장장치의 파일 시스템으로 접근할 수 있도록 파일 시스템을 편입시키는 작업
-    
-    Ex) USB 메모리의 파일 시스템을 컴퓨터의 /mnt경로로 마운트하면 USB메모리의 파일 시스템은 /mnt경로를 통해 연결됨!
-    
-    /mnt/homework/os/a.cpp → /mnt/pictures/Dog.jpg
-    
+  Ex) USB 메모리의 파일 시스템을 컴퓨터의 /mnt경로로 마운트하면 USB메모리의 파일 시스템은 /mnt경로를 통해 연결됨!
+  /mnt/homework/os/a.cpp → /mnt/pictures/Dog.jpg
 
 ### Cf) 전원 버튼을 누르고 부팅이 되기까지
 
 - `부팅`: 커널을 메모리에 적재하여 컴퓨터를 시작하는 과정
-    - 처음 컴퓨터의 전원 버튼을 누르면 (전원이 인가된다) 휘발성 메모리인 RAM이 아닌 비휘발성 메모리인 ROM과 같은 메모리에서 정보를 읽어들이게 된다.
-    - CPU는 컴퓨터에 전원이 들어오면 미리 정해진 특정 주소를 읽어들인다. (바이오스라는 프로그램)
-    - 바이오스는 하드웨어를 검색한 뒤 문제가 있는지 여부를 검사 (POST:Power On Self Test)
-        - 이상이 없으면 보조기억장치의 마스터 부트 레코드라는 영역으로부터 필요한 특별한 정보를 읽어 오게 된다.
-        - 보조기억장치의 첫 부분에 있는 MBR에는 부트스트랩(부트 로더)이라는 프로그램이 있다.
-            - 이 부트로더가 바로 커널의 위치를 찾아 메모리에 적재하는 프로그램
+  - 처음 컴퓨터의 전원 버튼을 누르면 (전원이 인가된다) 휘발성 메모리인 RAM이 아닌 비휘발성 메모리인 ROM과 같은 메모리에서 정보를 읽어들이게 된다.
+  - CPU는 컴퓨터에 전원이 들어오면 미리 정해진 특정 주소를 읽어들인다. (바이오스라는 프로그램)
+  - 바이오스는 하드웨어를 검색한 뒤 문제가 있는지 여부를 검사 (POST:Power On Self Test)
+    - 이상이 없으면 보조기억장치의 마스터 부트 레코드라는 영역으로부터 필요한 특별한 정보를 읽어 오게 된다.
+    - 보조기억장치의 첫 부분에 있는 MBR에는 부트스트랩(부트 로더)이라는 프로그램이 있다.
+      - 이 부트로더가 바로 커널의 위치를 찾아 메모리에 적재하는 프로그램
 
 ### 가상 머신과 컨테이너
 
 - 컴퓨터 하드웨어 상에 단일 운영체제를 설치하여 사용하는 경우가 많지만, 가상 머신과 컨테이너도 많이 활용한다.
 - `가상 머신`: 소프트웨어적으로 만들어 낸 가상의 컴퓨터
-    - `하이퍼바이저`: 이 가상 머신을 만들고 실행하기 위해 사용하는 소프트웨어
-        - 기존 운영체제와 독립된 환경을 구축할 수 있고, 또 다른 운영체제 및 애플리케이션을 작동시킬 수 있다.
-            - ex) 윈도우 운영체제의 대표적인 하이퍼바이저: VirtualBox
-        - **하드웨어 수준의 자원 격리 및 가상화를 제공**
-            - 단점) 속도가 다소 느리거나 용량을 많이 차지함 (가상 머신들이 공동의 하드웨어 자원을 할당받아 작동하는 구조이기 때문에 오버헤드 가능성)
+  - `하이퍼바이저`: 이 가상 머신을 만들고 실행하기 위해 사용하는 소프트웨어
+    - 기존 운영체제와 독립된 환경을 구축할 수 있고, 또 다른 운영체제 및 애플리케이션을 작동시킬 수 있다.
+      - ex) 윈도우 운영체제의 대표적인 하이퍼바이저: VirtualBox
+    - **하드웨어 수준의 자원 격리 및 가상화를 제공**
+      - 단점) 속도가 다소 느리거나 용량을 많이 차지함 (가상 머신들이 공동의 하드웨어 자원을 할당받아 작동하는 구조이기 때문에 오버헤드 가능성)
 - `컨테이너`
-    - 또 다른 가상화 및 자원 격리 기술
-        - ex) 도커, LXC
-    - 컨테이너 오케스트레이션 (다양한 컨테이너를 관리)
-        - ex) 쿠버네티스
-        - 여러 컨테이너를 자동으로 배포하거나 환경에 맞게 동적으로 컨테이너의 수를 가감할 수 있고, 컨테이너 간 네트워크를 구성할 수 있다.
+  - 또 다른 가상화 및 자원 격리 기술
+    - ex) 도커, LXC
+  - 컨테이너 오케스트레이션 (다양한 컨테이너를 관리)
+    - ex) 쿠버네티스
+    - 여러 컨테이너를 자동으로 배포하거나 환경에 맞게 동적으로 컨테이너의 수를 가감할 수 있고, 컨테이너 간 네트워크를 구성할 수 있다.
 - **가상머신과 컨테이너의 차이점**
-    - 가상머신 → 하드웨어 수준의 가상화 및 자원 격리
-        - 독립적인 운영체제 (커널)을 유지
-        - 가상 머신에서 어떤 프로세스를 실행할지에 구애받지 않고 가상머신마다 하드웨어를 격리
-    - 컨테이너 → 운영체제 수준의 가상화 및 자원 격리
-        - 동일한 커널을 공유
-        - 주어진 특정 프로세스를 실행하는데 필요한 자원만을 격리
-            
-            → 가상 머신에 비해 더 경량화되어 있고, 플랫폼에 구애받지 않는 실행에 유리
+  - 가상머신 → 하드웨어 수준의 가상화 및 자원 격리
+    - 독립적인 운영체제 (커널)을 유지
+    - 가상 머신에서 어떤 프로세스를 실행할지에 구애받지 않고 가상머신마다 하드웨어를 격리
+  - 컨테이너 → 운영체제 수준의 가상화 및 자원 격리
+    - 동일한 커널을 공유
+    - 주어진 특정 프로세스를 실행하는데 필요한 자원만을 격리
+      → 가상 머신에 비해 더 경량화되어 있고, 플랫폼에 구애받지 않는 실행에 유리
